force-app/main/default/objects/eCard_Serial_Number_Log__x/eCard_Serial_Number_Log__x.object-meta.xml
<CustomObject>
    <description>dw_view_ecard$serial_number_log</description>
    <externalDataSource>Heroku</externalDataSource>
    <externalName>dw_view_ecard$serial_number_log</externalName>
    <label>eCard_Serial_Number_Log</label>
    <pluralLabel>eCard_Serial_Number_Logs</pluralLabel>
</CustomObject>