force-app/main/default/objects/eCard_Serial_Number_Log__x/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <description>Brand</description>
    <externalDeveloperName>Brand</externalDeveloperName>
    <label>Brand</label>
    <length>100</length>
    <type>Text</type>
</CustomField>