force-app/main/default/objects/eCard_Serial_Number_Log__x/fields/Bus_Area__c.field-meta.xml
<CustomField>
    <fullName>Bus_Area__c</fullName>
    <description>Bus_Area</description>
    <externalDeveloperName>Bus_Area</externalDeveloperName>
    <label>Bus_Area</label>
    <length>100</length>
    <type>Text</type>
</CustomField>