force-app/main/default/objects/eCard_Serial_Number_Log__x/fields/Buspart_Name__c.field-meta.xml
<CustomField>
    <fullName>Buspart_Name__c</fullName>
    <description>Buspart_Name</description>
    <externalDeveloperName>Buspart_Name</externalDeveloperName>
    <label>Buspart_Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>