force-app/main/default/objects/eCard_Serial_Number_Log__x/fields/Buspart_Number__c.field-meta.xml
<CustomField>
    <fullName>Buspart_Number__c</fullName>
    <description>Buspart_Number</description>
    <externalDeveloperName>Buspart_Number</externalDeveloperName>
    <label>Buspart_Number</label>
    <length>200</length>
    <type>Text</type>
</CustomField>