force-app/main/default/objects/eCard_Serial_Number_Log__x/fields/Createdby_Name__c.field-meta.xml
<CustomField>
    <fullName>Createdby_Name__c</fullName>
    <description>Createdby_Name</description>
    <externalDeveloperName>Createdby_Name</externalDeveloperName>
    <label>Createdby_Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>