force-app/main/default/objects/eCard_Serial_Number_Log__x/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <description>Customer_Name</description>
    <externalDeveloperName>Customer_Name</externalDeveloperName>
    <label>Customer_Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>