force-app/main/default/objects/eCard_Serial_Number_Log__x/fields/Has_Attachments__c.field-meta.xml
<CustomField>
    <fullName>Has_Attachments__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has_Attachments</description>
    <externalDeveloperName>Has_Attachments</externalDeveloperName>
    <label>Has_Attachments</label>
    <type>Checkbox</type>
</CustomField>