force-app/main/default/objects/eCard_Serial_Number_Log__x/fields/Manufacture__c.field-meta.xml
<CustomField>
    <fullName>Manufacture__c</fullName>
    <description>Manufacture</description>
    <externalDeveloperName>Manufacture</externalDeveloperName>
    <label>Manufacture</label>
    <length>100</length>
    <type>Text</type>
</CustomField>