force-app/main/default/objects/eCard_Serial_Number_Log__x/fields/Model_Number__c.field-meta.xml
<CustomField>
    <fullName>Model_Number__c</fullName>
    <description>Model_Number</description>
    <externalDeveloperName>Model_Number</externalDeveloperName>
    <label>Model_Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>