force-app/main/default/objects/eCard_Serial_Number_Log__x/fields/Modifiedby_Name__c.field-meta.xml
<CustomField>
    <fullName>Modifiedby_Name__c</fullName>
    <description>Modifiedby_Name</description>
    <externalDeveloperName>Modifiedby_Name</externalDeveloperName>
    <label>Modifiedby_Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>