force-app/main/default/objects/eCard_Serial_Number_Log__x/fields/Remarks__c.field-meta.xml
<CustomField>
    <fullName>Remarks__c</fullName>
    <description>Remarks</description>
    <externalDeveloperName>Remarks</externalDeveloperName>
    <label>Remarks</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>