force-app/main/default/objects/eCard_Serial_Number_Log__x/fields/Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Serial_Number__c</fullName>
    <description>Serial_Number</description>
    <externalDeveloperName>Serial_Number</externalDeveloperName>
    <label>Serial_Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>