force-app/main/default/objects/eCard_Serial_Number_Log__x/fields/Serial_Number_Type__c.field-meta.xml
<CustomField>
    <fullName>Serial_Number_Type__c</fullName>
    <description>Serial_Number_Type</description>
    <externalDeveloperName>Serial_Number_Type</externalDeveloperName>
    <label>Serial_Number_Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>