force-app/main/default/objects/eCard_Serial_Number_Log__x/fields/Tire_PSI__c.field-meta.xml
<CustomField>
    <fullName>Tire_PSI__c</fullName>
    <description>Tire_PSI</description>
    <externalDeveloperName>Tire_PSI</externalDeveloperName>
    <label>Tire_PSI</label>
    <length>50</length>
    <type>Text</type>
</CustomField>