force-app/main/default/objects/eCard_Serial_Number_Log__x/fields/Tire_Size_Ply__c.field-meta.xml
<CustomField>
    <fullName>Tire_Size_Ply__c</fullName>
    <description>Tire_Size_Ply</description>
    <externalDeveloperName>Tire_Size_Ply</externalDeveloperName>
    <label>Tire_Size_Ply</label>
    <length>50</length>
    <type>Text</type>
</CustomField>