force-app/main/default/objects/eCard_Serial_Number_Log__x/fields/UOM__c.field-meta.xml
<CustomField>
    <fullName>UOM__c</fullName>
    <description>UOM</description>
    <externalDeveloperName>UOM</externalDeveloperName>
    <label>UOM</label>
    <length>200</length>
    <type>Text</type>
</CustomField>