force-app/main/default/objects/eCard_Serial_Number_Log__x/fields/Updated_Date__c.field-meta.xml
<CustomField>
    <fullName>Updated_Date__c</fullName>
    <description>Updated_Date</description>
    <externalDeveloperName>Updated_Date</externalDeveloperName>
    <label>Updated_Date</label>
    <type>DateTime</type>
</CustomField>