force-app/main/default/objects/eCard_Serial_Number_Log__x/fields/Updatedby_Name__c.field-meta.xml
<CustomField>
    <fullName>Updatedby_Name__c</fullName>
    <description>Updatedby_Name</description>
    <externalDeveloperName>Updatedby_Name</externalDeveloperName>
    <label>Updatedby_Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>